// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderChartConfig Query Events simple select + group by query logs 1`] = `
Array [
  Object {
    "ServiceName": "app",
    "count": "1",
  },
  Object {
    "ServiceName": "api",
    "count": "1",
  },
]
`;

exports[`renderChartConfig Query Events simple select + where query logs 1`] = `
Array [
  Object {
    "Body": "Oh no! Something went wrong!",
  },
]
`;

exports[`renderChartConfig Query Metrics calculates min_rate/max_rate correctly for sum metrics: maxSum 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "max(toFloat64OrNull(toString(Value)))": 24,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "max(toFloat64OrNull(toString(Value)))": 134,
  },
]
`;

exports[`renderChartConfig Query Metrics calculates min_rate/max_rate correctly for sum metrics: minSum 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "min(toFloat64OrNull(toString(Value)))": 15,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "min(toFloat64OrNull(toString(Value)))": 52,
  },
]
`;

exports[`renderChartConfig Query Metrics handles counter resets correctly for sum metrics 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 15,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 52,
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge with group-by 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge with where 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 5.125,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 42,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 2`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "max(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "max(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 3`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 10.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 84,
  },
]
`;

exports[`renderChartConfig Query Metrics single sum rate 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 19,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 79,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 5813,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:15:00Z",
    "sum(toFloat64OrNull(toString(Value)))": 78754,
  },
]
`;

exports[`renderChartConfig Query Metrics three_timestamps_bounded histogram with reset (p50) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 10,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 10,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:02:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 30,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p25) 1`] = `
Array [
  Object {
    "Rate": 0,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Rate": 10,
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p50) 1`] = `
Array [
  Object {
    "Rate": 0,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Rate": 20,
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p90) 1`] = `
Array [
  Object {
    "Rate": 0,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Rate": 30,
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_lower_bound_inf histogram (p50) 1`] = `
Array [
  Object {
    "Rate": 0,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Rate": 1,
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_upper_bound_inf histogram (p50) 1`] = `
Array [
  Object {
    "Rate": 0,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Rate": 30,
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
  },
]
`;
